<resources>
    <string name="app_name">Smart Cabinet</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_auth_ui">Sign in</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    // MainActivity
    <string name="group_not_visible">This group is not visible now.</string>
    <string name="no_email">No email</string>
    <string name="cannot_load_list">Can\'t load list</string>

    // Menu
    <string name="action_add_cabinet">Add cabinet</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_member">Add member</string>

    // AuthUiActivity
    <string name="user_sign_in_button_text">Sign in</string>

    // Auth UI error messages
    <string name="unknown_response">Unknown response</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="sign_out_failed">Sign out failed</string>

    // nav_drawer
    <string name="create_new_group">Create</string>
    <string name="group_list_title">Groups</string>

    // nav_header_main
    <string name="user_setting_button_description">user setting</string>
    <string name="user_sign_out_button_description">sign out</string>
    <string name="not_sign_in">Not sign in</string>

    // activity_no_group
    <string name="no_group_title">You are not participated any group</string>
    <string name="being_new_owner_text">Do you want to create new group?</string>
    <string name="already_member_but_not_found_group_text">Aren\'t your groups visible?</string>
    <string name="group_list_refresh_button_text">Refresh</string>
    <string name="no_group_sign_out_text">Are you want to sign out?</string>
    <string name="user_sign_out_button_text">Sign out</string>
    <string name="delete_account_with_no_group_text">Do you want to delete your account now?</string>
    <string name="delete_account_with_no_group_button">Delete</string>
    <string name="delete_account_alert_text">Are you really want to delete your account?</string>
    <string name="delete_account_alert_positive_button">Delete</string>
    <string name="delete_account_failed">Delete account failed</string>
    <string name="need_reauthentication_title">Please sign in again</string>
    <string name="need_reauthentication_content">Deleting account needs recent authentication.</string>

    // NoGroupActivity
    <string name="group_list_is_empty">Group list is empty</string>
    <string name="group_list_refresh_failed">Refreshing group list failed</string>

    // dialog_create_group
    <string name="create_group_dialog_title">Create new group</string>
    <string name="create_group_group_name_input">Name</string>
    <string name="create_group_cabinet_id_input">Cabinet ID</string>
    <string name="create_group_cabinet_key_input">Serial key</string>
    <string name="create_group_cabinet_description_input">Description(Optional)</string>
    <string name="create_group_positive_button">Create</string>
    <string name="create_group_successfully">Create group successfully</string>
    <string name="create_group_failed">Create group failed</string>

    // dialog_add_member
    <string name="add_member_dialog_title">Add new member</string>
    <string name="add_member_email_input">Email</string>
    <string name="add_member_positive_button">Add</string>
    <string name="add_member_successfully">Add member successfully</string>
    <string name="add_member_failed">Add member failed</string>

    // dialog_add_cabinet
    <string name="add_cabinet_dialog_title">Add new cabinet</string>
    <string name="add_cabinet_id_input">Cabinet ID</string>
    <string name="add_cabinet_key_input">Serial key</string>
    <string name="add_cabinet_description_input">Description(Optional)</string>
    <string name="add_cabinet_positive_button">Add</string>
    <string name="add_cabinet_successfully">Add cabinet successfully</string>
    <string name="add_cabinet_failed">Add cabinet failed</string>

    // GroupSettingsActivity
    <string name="title_activity_group_settings">Group Settings</string>

    // settings_group
    <string name="settings_group_owner_title">Owner</string>
    <string name="settings_group_admin_title">Admin</string>
    <string name="settings_group_member_title">Member</string>
    <string name="settings_delete_group">Delete group</string>
    <string name="settings_leave_group">Leave group</string>
    <string name="settings_demote_self">Demote self</string>
    <string name="leave_group_dialog_title">Leave this group?</string>
    <string name="leave_group_positive_button">Leave</string>
    <string name="delete_group_dialog_title">Delete this group?</string>
    <string name="delete_group_positive_button">Delete</string>
    <string name="leave_group_failed">Leave group failed</string>
    <string name="delete_group_failed">Delete group failed</string>

    // menu.cabinet
    <string name="cabinet_menu_open_close">Open/Close</string>
    <string name="open_close_cabinet_successfully">Open/close cabinet successfully</string>
    <string name="open_close_cabinet_failed">Open/Close cabinet failed</string>
    <string name="cabinet_menu_edit_description">Edit description</string>
    <string name="cabinet_menu_delete">Delete</string>
    <string name="delete_cabinet_dialog_title">Delete this cabinet?</string>
    <string name="delete_cabinet_positive_button">Delete</string>
    <string name="delete_cabinet_successfully">Delete cabinet successfully</string>
    <string name="delete_cabinet_failed">Delete cabinet failed</string>
    <string name="cabinet_popup_memu_button">Menu</string>

    // dialog_edit_cabinet
    <string name="edit_cabinet_dialog_title">Edit cabinet</string>
    <string name="edit_cabinet_description_input">Description</string>
    <string name="edit_cabinet_positive_button">Edit</string>
    <string name="edit_cabinet_successfully">Edit cabinet successfully</string>
    <string name="edit_cabinet_failed">Edit cabinet failed</string>

    // delegate ownership
    <string name="delegate_ownership_dialog_title">Delegate the ownership?</string>
    <string name="delegate_ownership_positive_button">Delegate</string>
    <string name="delegate_ownership_successfully">Delegate ownership successfully</string>
    <string name="delegate_ownership_failed">Delegate ownership failed</string>

    // menu.member
    <string name="member_menu_delete">Delete</string>
    <string name="member_menu_promote_to_admin">Promote</string>
    <string name="member_menu_delegate_ownership">Delegate ownership</string>
    <string name="delete_member_dialog_title">Delete this member?</string>
    <string name="delete_member_positive_button">Delete</string>
    <string name="delete_member_successfully">Delete member successfully</string>
    <string name="delete_member_failed">Delete member failed</string>
    <string name="promote_to_admin_successfully">Promote to admin successfully</string>
    <string name="promote_to_admin_failed">Promote to admin failed</string>
    <string name="member_popup_menu_button">Menu</string>

    // menu.admin
    <string name="admin_menu_delete">Delete</string>
    <string name="admin_menu_delegate_ownership">Delegate ownership</string>
    <string name="admin_menu_demote_to_member">Demote</string>
    <string name="demote_to_member_successfully">Demote admin to member successfully</string>
    <string name="demote_to_member_failed">Demote to member failed</string>
    <string name="delete_admin_dialog_title">Delete this admin?</string>
    <string name="delete_admin_positive_button">Delete</string>
    <string name="delete_admin_successfully">Delete admin successfully</string>
    <string name="delete_admin_failed">Delete admin failed</string>
    <string name="admin_popup_menu_button">Menu</string>

    // GroupInfoFragmentPagerAdapter
    <string name="title_admin">Admin</string>
    <string name="title_member">Member</string>
    <string name="title_cabinet">Cabinet</string>

</resources>
