<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/create_group_group_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/create_group_group_name_input"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/create_group_cabinet_id_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/create_group_cabinet_id_input"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/create_group_cabinet_key_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/create_group_cabinet_key_input"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/create_group_cabinet_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/create_group_cabinet_description_input"
        android:inputType="textPersonName" />
</LinearLayout>